--- a/Quienes_somos.html
+++ b/Quienes_somos.html
@@ -50,9 +50,9 @@
                         <a class="dropdown-item" href="Pantalones.html">Pantalones</a>
                         <a class="dropdown-item" href="polerones.html">Polerones</a>
                     </div>
-                    <li class="nav-item">
-                        <a class="nav-link color_letra" href="contactanos.html">Contáctanos</a>
-                    </li>
+                <li class="nav-item">
+                    <a class="nav-link color_letra" href="contactanos.html">Contáctanos</a>
+                </li>
                 </li>
             </ul>
             <!--Registrarse / Iniciar Sesion-->
@@ -90,7 +90,7 @@
         <div class="row">
             <div class="col-md-3 centrado"
                 style="padding-right: 0; padding-left: 0; padding-top: 1%; padding-bottom: 2%; text-align: center;">
-                <img src="Imagenes/logo 2.png" alt="logo" width="250">
+                <img src="Imagenes/logo 2.png" alt="logo" class="imagen">
             </div>
             <div class="col-md-9">
                 <h2 style="text-align: center;"><u>Historia</u></h2>
@@ -111,14 +111,16 @@
     </div>
 
     <!--Inicio Ubicación-->
-    <div class="container quienes_somos" style="margin-top: 50px; text-align: center;">
-        <div class="row">
-            <div>
-                <b style="font-size: 20px; font-family: 'Lato', sans-serif;">Encúentranos en nuestro local Rio Amazonas
-                    #3638, Conchalí</b> <br>
+    <div class="container" style="margin-top: 50px;">
+        <div class="row" style="background-color: #fff; border: black solid 1px;">
+            <div class="col-md-12" >
+                <h3 class="texto_is" style="text-align: center; padding-top: 10px;">Encúentranos en nuestro local Rio Amazonas
+                    #3638, Conchalí</h3>
+            </div>
+            <div class="col-md-12">
                 <iframe style="border: black solid 1px;"
                     src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3331.2274560458195!2d-70.66178308523853!3d-33.391229601860495!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x9662c6650f880d5b%3A0x8d720c40ff1c43d!2sR%C3%ADo%20Amazonas%203638%2C%20Conchal%C3%AD%2C%20Regi%C3%B3n%20Metropolitana!5e0!3m2!1ses-419!2scl!4v1620338301318!5m2!1ses-419!2scl"
-                    width="1000" height="300" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+                    allowfullscreen="" loading="lazy"></iframe>
             </div>
         </div>
     </div>
