--- a/poleras.html
+++ b/poleras.html
@@ -49,9 +49,9 @@
                         <a class="dropdown-item" href="Pantalones.html">Pantalones</a>
                         <a class="dropdown-item" href="polerones.html">Polerones</a>
                     </div>
-                    <li class="nav-item">
-                        <a class="nav-link color_letra" href="contactanos.html">Contáctanos</a>
-                    </li>
+                <li class="nav-item">
+                    <a class="nav-link color_letra" href="contactanos.html">Contáctanos</a>
+                </li>
                 </li>
             </ul>
             <!--Registrarse / Iniciar Sesion-->
@@ -88,8 +88,11 @@
     <form action="poleras.html" method="POST" name="buscar_polera" id="buscar_polera">
         <div class="container">
             <div class="row">
-                <input class="form-control mr-sm-2 buscar" type="text" placeholder="Ingresar Producto" style="margin-top: 1rem; margin-bottom: 1rem;">
-                <button class="btn btn-primary" style="border: #005BBC solid 1px; margin-top: 1rem; margin-bottom: 1rem;" type="submit">Buscar</button>
+                <input class="form-control mr-sm-2 buscar" type="text" placeholder="Ingresar Producto"
+                    style="margin-top: 1rem; margin-bottom: 1rem;">
+                <button class="btn btn-primary"
+                    style="border: #005BBC solid 1px; margin-top: 1rem; margin-bottom: 1rem;"
+                    type="submit">Buscar</button>
             </div>
         </div>
     </form>
@@ -100,7 +103,8 @@
             <div class="col-md-4">
                 <div class="card">
                     <div class="card">
-                        <img src="imagenes/polera1.jpg" id="polera1" alt="Polera 1" style="width:100%" class="ajuste_fotos">
+                        <img src="imagenes/polera1.jpg" id="polera1" alt="Polera 1" style="width:100%"
+                            class="ajuste_fotos">
                         <h1>Polera Jordan</h1>
                         <p class="price">$7.500</p>
                         <p>Polera Top Quality con estampado a serigrafia y tela prelavada</p>
@@ -111,7 +115,8 @@
             <div class="col-md-4">
                 <div class="card">
                     <div class="card">
-                        <img src="imagenes/polera2.jpg" id="polera2" alt="Polera 2" style="width:100%" class="ajuste_fotos">
+                        <img src="imagenes/polera2.jpg" id="polera2" alt="Polera 2" style="width:100%"
+                            class="ajuste_fotos">
                         <h1>Polera Tommy Hilfiger</h1>
                         <p class="price">$7.500</p>
                         <p>Polera Top Quality con estampado a serigrafia y tela prelavada</p>
@@ -122,7 +127,8 @@
             <div class="col-md-4">
                 <div class="card">
                     <div class="card">
-                        <img src="imagenes/polera3.jpg" id="polera3" alt="Polera 3" style="width:100%" class="ajuste_fotos">
+                        <img src="imagenes/polera3.jpg" id="polera3" alt="Polera 3" style="width:100%"
+                            class="ajuste_fotos">
                         <h1>Polera Jordan</h1>
                         <p class="price">$7.500</p>
                         <p>Polera Top Quality con estampado a serigrafia y tela prelavada</p>
