--- a/poleras.html
+++ b/poleras.html
@@ -105,7 +105,8 @@
                     <div class="card">
                         <img src="imagenes/polera1.jpg" id="polera1" alt="Polera 1" style="width:100%"
                             class="ajuste_fotos">
-                        <h1>Polera Jordan</h1>
+                        <h1>Polera</h1>
+                        <h1>Jordan</h1>
                         <p class="price">$7.500</p>
                         <p>Polera Top Quality con estampado a serigrafia y tela prelavada</p>
                         <p><button>Añadir al carrito</button></p>
@@ -117,7 +118,8 @@
                     <div class="card">
                         <img src="imagenes/polera2.jpg" id="polera2" alt="Polera 2" style="width:100%"
                             class="ajuste_fotos">
-                        <h1>Polera Tommy Hilfiger</h1>
+                        <h1>Polera</h1>
+                        <h1>Tommy Hilfiger</h1>
                         <p class="price">$7.500</p>
                         <p>Polera Top Quality con estampado a serigrafia y tela prelavada</p>
                         <p><button>Añadir al carrito</button></p>
@@ -129,7 +131,8 @@
                     <div class="card">
                         <img src="imagenes/polera3.jpg" id="polera3" alt="Polera 3" style="width:100%"
                             class="ajuste_fotos">
-                        <h1>Polera Jordan</h1>
+                        <h1>Polera</h1>
+                        <h1>Jordan</h1>
                         <p class="price">$7.500</p>
                         <p>Polera Top Quality con estampado a serigrafia y tela prelavada</p>
                         <p><button>Añadir al carrito</button></p>
