--- a/polerones.html
+++ b/polerones.html
@@ -101,7 +101,8 @@
                 <div class="card">
                     <div class="card">
                         <img src="imagenes/poleron1.jpg" id="poleron1" alt="Poleron 1" style="width:100%" class="ajuste_fotos">
-                        <h1>Poleron Calvin Klein</h1>
+                        <h1>Poleron</h1> 
+                        <h1>Calvin Klein</h1>
                         <p class="price">$14.000</p>
                         <p>Poleron Top Quality con estampado a serigrafia y tela prelavada</p>
                         <p><button>Añadir al carrito</button></p>
@@ -112,7 +113,8 @@
                 <div class="card">
                     <div class="card">
                         <img src="imagenes/poleron2.jpg" id="poleron2" alt="Poleron 2" style="width:100%" class="ajuste_fotos">
-                        <h1>Poleron GAP</h1>
+                        <h1>Poleron</h1> 
+                        <h1>GAP</h1>
                         <p class="price">$14.000</p>
                         <p>Poleron Top Quality con bordado y tela prelavada</p>
                         <p><button>Añadir al carrito</button></p>
@@ -123,7 +125,8 @@
                 <div class="card">
                     <div class="card">
                         <img src="imagenes/poleron3.jpg" id="poleron3" alt="Poleron 3" style="width:100%" class="ajuste_fotos">
-                        <h1>Poleron Guess</h1>
+                        <h1>Poleron</h1>
+                        <h1>Guess</h1>
                         <p class="price">$12.000</p>
                         <p>Poleron Top Quality con estampado a serigrafia y tela prelavada</p>
                         <p><button>Añadir al carrito</button></p>
@@ -136,7 +139,8 @@
                 <div class="card">
                     <div class="card">
                         <img src="imagenes/poleron4.jpg" id="poleron4" alt="Poleron 4" style="width:100%" class="ajuste_fotos">
-                        <h1>Poleron Tommy Hilfiger</h1>
+                        <h1>Poleron</h1>
+                        <h1>Tommy Hilfiger</h1>
                         <p class="price">$14.000</p>
                         <p>Poleron Top Quality con estampado a serigrafia y tela prelavada</p>
                         <p><button>Añadir al carrito</button></p>
@@ -147,7 +151,8 @@
                 <div class="card">
                     <div class="card">
                         <img src="imagenes/poleron5.jpg" id="poleron5" alt="Poleron 5" style="width:100%" class="ajuste_fotos">
-                        <h1>Poleron Armani Exchange </h1>
+                        <h1>Poleron Armani</h1> 
+                        <h1>Exchange</h1>
                         <p class="price">$14.000</p>
                         <p>Poleron Top Quality con estampado a serigrafia y tela prelavada</p>
                         <p><button>Añadir al carrito</button></p>
@@ -158,7 +163,8 @@
                 <div class="card">
                     <div class="card">
                         <img src="imagenes/poleron6.jpg" id="poleron6" alt="Poleron 6" style="width:100%" class="ajuste_fotos">
-                        <h1>Poleron Tommy Hilfiger</h1>
+                        <h1>Poleron</h1>
+                        <h1>Tommy Hilfiger</h1>
                         <p class="price">$14.000</p>
                         <p>Poleron Top Quality con estampado a serigrafia y tela prelavada</p>
                         <p><button>Añadir al carrito</button></p>
@@ -171,7 +177,8 @@
                 <div class="card">
                     <div class="card">
                         <img src="imagenes/poleron7.jpg" id="poleron7" alt="Poleron 7" style="width:100%" class="ajuste_fotos">
-                        <h1>Poleron GAP</h1>
+                        <h1>Poleron</h1> 
+                        <h1>GAP</h1>
                         <p class="price">$14.000</p>
                         <p>Poleron Top Quality con bordado y tela prelavada</p>
                         <p><button>Añadir al carrito</button></p>
@@ -182,7 +189,8 @@
                 <div class="card">
                     <div class="card">
                         <img src="imagenes/poleron8.jpg" id="poleron8" alt="Poleron 8" style="width:100%" class="ajuste_fotos">
-                        <h1>Poleron Guess</h1>
+                        <h1>Poleron</h1>
+                        <h1>Guess</h1>
                         <p class="price">$12.000</p>
                         <p>Poleron Top Quality con estampado a serigrafia y tela prelavada</p>
                         <p><button>Añadir al carrito</button></p>
@@ -193,7 +201,8 @@
                 <div class="card">
                     <div class="card">
                         <img src="imagenes/poleron9.jpg" id="poleron9" alt="Poleron 9" style="width:100%" class="ajuste_fotos">
-                        <h1>Poleron GAP</h1>
+                        <h1>Poleron</h1> 
+                        <h1>GAP</h1>
                         <p class="price">$14.000</p>
                         <p>Poleron Top Quality con bordado y tela prelavada</p>
                         <p><button>Añadir al carrito</button></p>
