--- a/contactanos.html
+++ b/contactanos.html
@@ -38,123 +38,17 @@
                 if ($("#correo").val().trim().length == 0) {
                     mensaje = mensaje + "<br>El correo electrónico no debe estar vacío";
                 }
-                if ($("#num_doc").val().trim().length == 0) {
-                    mensaje = mensaje + "<br>El número de documento no debe estar vacío";
-                }
-                if (isNaN($("#telefono").val())) {
-                    mensaje = mensaje + "<br>El teléfono solo puede ser números";
-                }
-                if ($("#telefono").val().trim().length == 0) {
-                    mensaje = mensaje + "<br>El teléfono no debe estar vacío";
+                if ($("#asunto").val().trim().length == 0) {
+                    mensaje = mensaje + "<br>El asunto no debe estar vacío";
                 }
                 if ($("#comentario").val().trim().length == 0) {
-                    mensaje = mensaje + "<br>El campo de comentario no debe estar vacío";
-                }
-                if ($("#regiones").val() == "sin-region"){
-                    mensaje = mensaje + "<br>Debe seleccionar una región"
-                }
-                if ($("#comunas").val() == "sin-comuna"){
-                    mensaje = mensaje + "<br>Debe seleccionar una comuna"
+                    mensaje = mensaje + "<br>El comentario no debe estar vacío";
                 }
                 if (mensaje != "Por favor revisar los siguientes detalles en el formulario: ") {
                     $("#error").html(mensaje); //mostrando el texto de la variable en el div del html
                     $("#error").show(); //hace visible el div
                     event.preventDefault(); //evita que los datos del formulario se envie
                 }
-            });
-        });
-        var RegionesYcomunas = {
-            "regiones": [{
-                "NombreRegion": "Arica y Parinacota",
-                "comunas": ["Arica", "Camarones", "Putre", "General Lagos"]
-            },
-            {
-                "NombreRegion": "Tarapacá",
-                "comunas": ["Iquique", "Alto Hospicio", "Pozo Almonte", "Camiña", "Colchane", "Huara", "Pica"]
-            },
-            {
-                "NombreRegion": "Antofagasta",
-                "comunas": ["Antofagasta", "Mejillones", "Sierra Gorda", "Taltal", "Calama", "Ollagüe", "San Pedro de Atacama", "Tocopilla", "María Elena"]
-            },
-            {
-                "NombreRegion": "Atacama",
-                "comunas": ["Copiapó", "Caldera", "Tierra Amarilla", "Chañaral", "Diego de Almagro", "Vallenar", "Alto del Carmen", "Freirina", "Huasco"]
-            },
-            {
-                "NombreRegion": "Coquimbo",
-                "comunas": ["La Serena", "Coquimbo", "Andacollo", "La Higuera", "Paiguano", "Vicuña", "Illapel", "Canela", "Los Vilos", "Salamanca", "Ovalle", "Combarbalá", "Monte Patria", "Punitaqui", "Río Hurtado"]
-            },
-            {
-                "NombreRegion": "Valparaíso",
-                "comunas": ["Valparaíso", "Casablanca", "Concón", "Juan Fernández", "Puchuncaví", "Quintero", "Viña del Mar", "Isla de Pascua", "Los Andes", "Calle Larga", "Rinconada", "San Esteban", "La Ligua", "Cabildo", "Papudo", "Petorca", "Zapallar", "Quillota", "Calera", "Hijuelas", "La Cruz", "Nogales", "San Antonio", "Algarrobo", "Cartagena", "El Quisco", "El Tabo", "Santo Domingo", "San Felipe", "Catemu", "Llaillay", "Panquehue", "Putaendo", "Santa María", "Quilpué", "Limache", "Olmué", "Villa Alemana"]
-            },
-            {
-                "NombreRegion": "Región del Libertador Gral. Bernardo O’Higgins",
-                "comunas": ["Rancagua", "Codegua", "Coinco", "Coltauco", "Doñihue", "Graneros", "Las Cabras", "Machalí", "Malloa", "Mostazal", "Olivar", "Peumo", "Pichidegua", "Quinta de Tilcoco", "Rengo", "Requínoa", "San Vicente", "Pichilemu", "La Estrella", "Litueche", "Marchihue", "Navidad", "Paredones", "San Fernando", "Chépica", "Chimbarongo", "Lolol", "Nancagua", "Palmilla", "Peralillo", "Placilla", "Pumanque", "Santa Cruz"]
-            },
-            {
-                "NombreRegion": "Región del Maule",
-                "comunas": ["Talca", "ConsVtución", "Curepto", "Empedrado", "Maule", "Pelarco", "Pencahue", "Río Claro", "San Clemente", "San Rafael", "Cauquenes", "Chanco", "Pelluhue", "Curicó", "Hualañé", "Licantén", "Molina", "Rauco", "Romeral", "Sagrada Familia", "Teno", "Vichuquén", "Linares", "Colbún", "Longaví", "Parral", "ReVro", "San Javier", "Villa Alegre", "Yerbas Buenas"]
-            },
-            {
-                "NombreRegion": "Región del Biobío",
-                "comunas": ["Concepción", "Coronel", "Chiguayante", "Florida", "Hualqui", "Lota", "Penco", "San Pedro de la Paz", "Santa Juana", "Talcahuano", "Tomé", "Hualpén", "Lebu", "Arauco", "Cañete", "Contulmo", "Curanilahue", "Los Álamos", "Tirúa", "Los Ángeles", "Antuco", "Cabrero", "Laja", "Mulchén", "Nacimiento", "Negrete", "Quilaco", "Quilleco", "San Rosendo", "Santa Bárbara", "Tucapel", "Yumbel", "Alto Biobío", "Chillán", "Bulnes", "Cobquecura", "Coelemu", "Coihueco", "Chillán Viejo", "El Carmen", "Ninhue", "Ñiquén", "Pemuco", "Pinto", "Portezuelo", "Quillón", "Quirihue", "Ránquil", "San Carlos", "San Fabián", "San Ignacio", "San Nicolás", "Treguaco", "Yungay"]
-            },
-            {
-                "NombreRegion": "Región de la Araucanía",
-                "comunas": ["Temuco", "Carahue", "Cunco", "Curarrehue", "Freire", "Galvarino", "Gorbea", "Lautaro", "Loncoche", "Melipeuco", "Nueva Imperial", "Padre las Casas", "Perquenco", "Pitrufquén", "Pucón", "Saavedra", "Teodoro Schmidt", "Toltén", "Vilcún", "Villarrica", "Cholchol", "Angol", "Collipulli", "Curacautín", "Ercilla", "Lonquimay", "Los Sauces", "Lumaco", "Purén", "Renaico", "Traiguén", "Victoria",]
-            },
-            {
-                "NombreRegion": "Región de Los Ríos",
-                "comunas": ["Valdivia", "Corral", "Lanco", "Los Lagos", "Máfil", "Mariquina", "Paillaco", "Panguipulli", "La Unión", "Futrono", "Lago Ranco", "Río Bueno"]
-            },
-            {
-                "NombreRegion": "Región de Los Lagos",
-                "comunas": ["Puerto Montt", "Calbuco", "Cochamó", "Fresia", "FruVllar", "Los Muermos", "Llanquihue", "Maullín", "Puerto Varas", "Castro", "Ancud", "Chonchi", "Curaco de Vélez", "Dalcahue", "Puqueldón", "Queilén", "Quellón", "Quemchi", "Quinchao", "Osorno", "Puerto Octay", "Purranque", "Puyehue", "Río Negro", "San Juan de la Costa", "San Pablo", "Chaitén", "Futaleufú", "Hualaihué", "Palena"]
-            },
-            {
-                "NombreRegion": "Región Aisén del Gral. Carlos Ibáñez del Campo",
-                "comunas": ["Coihaique", "Lago Verde", "Aisén", "Cisnes", "Guaitecas", "Cochrane", "O’Higgins", "Tortel", "Chile Chico", "Río Ibáñez"]
-            },
-            {
-                "NombreRegion": "Región de Magallanes y de la AntárVca Chilena",
-                "comunas": ["Punta Arenas", "Laguna Blanca", "Río Verde", "San Gregorio", "Cabo de Hornos (Ex Navarino)", "AntárVca", "Porvenir", "Primavera", "Timaukel", "Natales", "Torres del Paine"]
-            },
-            {
-                "NombreRegion": "Región Metropolitana de Santiago",
-                "comunas": ["Cerrillos", "Cerro Navia", "Conchalí", "El Bosque", "Estación Central", "Huechuraba", "Independencia", "La Cisterna", "La Florida", "La Granja", "La Pintana", "La Reina", "Las Condes", "Lo Barnechea", "Lo Espejo", "Lo Prado", "Macul", "Maipú", "Ñuñoa", "Pedro Aguirre Cerda", "Peñalolén", "Providencia", "Pudahuel", "Quilicura", "Quinta Normal", "Recoleta", "Renca", "San Joaquín", "San Miguel", "San Ramón", "Vitacura", "Puente Alto", "Pirque", "San José de Maipo", "Colina", "Lampa", "TilVl", "San Bernardo", "Buin", "Calera de Tango", "Paine", "Melipilla", "Alhué", "Curacaví", "María Pinto", "San Pedro", "Talagante", "El Monte", "Isla de Maipo", "Padre Hurtado", "Peñaflor"]
-            }]
-        }
-        
-        jQuery(document).ready(function () {
-
-            var iRegion = 0;
-            var htmlRegion = '<option value="sin-region">Seleccione región</option><option value="sin-region">--</option>';
-            var htmlComunas = '<option value="sin-region">Seleccione comuna</option><option value="sin-region">--</option>';
-
-            jQuery.each(RegionesYcomunas.regiones, function () {
-                htmlRegion = htmlRegion + '<option value="' + RegionesYcomunas.regiones[iRegion].NombreRegion + '">' + RegionesYcomunas.regiones[iRegion].NombreRegion + '</option>';
-                iRegion++;
-            });
-
-            jQuery('#regiones').html(htmlRegion);
-            jQuery('#comunas').html(htmlComunas);
-
-            jQuery('#regiones').change(function () {
-                var iRegiones = 0;
-                var valorRegion = jQuery(this).val();
-                var htmlComuna = '<option value="sin-comuna">Seleccione comuna</option><option value="sin-comuna">--</option>';
-                jQuery.each(RegionesYcomunas.regiones, function () {
-                    if (RegionesYcomunas.regiones[iRegiones].NombreRegion == valorRegion) {
-                        var iComunas = 0;
-                        jQuery.each(RegionesYcomunas.regiones[iRegiones].comunas, function () {
-                            htmlComuna = htmlComuna + '<option value="' + RegionesYcomunas.regiones[iRegiones].comunas[iComunas] + '">' + RegionesYcomunas.regiones[iRegiones].comunas[iComunas] + '</option>';
-                            iComunas++;
-                        });
-                    }
-                    iRegiones++;
-                });
-                jQuery('#comunas').html(htmlComuna);
             });
         });
     </script>
@@ -225,80 +119,56 @@
     <!--Fin Barra Menu-->
 
     <!--Inicio Formulario-->
-    <div class="container espaciado_superior" style="background-color: #fff; border: black solid 1px;">
-
-        <h1 style="padding-top: 10px;">Comunícate con Nosotros</h1>
-        <form action="home.html" method="POST" name="formulario_contacto" id="formulario_contacto">
-            <div class="form-group">
-                <label for="nombre_completo">Nombre Completo</label>
-                <input type="text" class="form-control" name="nombre_completo" id="nombre_completo" style="border: black solid 1px;"
-                    placeholder="Ingrese su nombre">
-            </div>
-
-            <div class="form-group">
-                <label for="correo">Correo Eletrónico</label>
-                <input type="email" class="form-control" name="correo" id="correo" style="border: black solid 1px;" placeholder="ejemplo@ejemplo.com">
-            </div>
-
-            <div class="form-check" style="margin-bottom: 10px;">
-                <label class="form-check-label" for="documento">
-                    <input type="radio" class="form-check-input" name="documento" id="documento" style="border: black solid 1px;" value="rut" checked>Rut
-                </label>
-
-            </div>
-
-            <div class="form-check" style="margin-bottom: 10px;">
-                <label class="form-check-label" for="documento">
-                    <input type="radio" class="form-check-input" name="documento" id="documento" style="border: black solid 1px;"
-                        value="pasaporte">Pasaporte
-                </label>
-
-            </div>
-
-            <div class="form-group">
-                <label for="num_doc">Número de Documento</label>
-                <input type="text" class="form-control" name="num_doc" id="num_doc" style="border: black solid 1px;">
-            </div>
-
-            <div class="form-group">
-                <label for="telefono">Número de Teléfono</label>
-                <input type="tel" class="form-control" name="telefono" id="telefono" style="border: black solid 1px;">
-            </div>
-
-            <div class="form-group">
-                <label for="ciudad">Seleccione su Región</label>
-                <select id="regiones" class="form-control" style="border: black solid 1px;"></select>
-            </div>
-
-            <div class="form-group">
-                <label for="ciudad">Seleccione su Comuna</label>
-                <select id="comunas" class="form-control" style="border: black solid 1px;"></select>
-            </div>
-
-            <div class="form-group">
-                <label for="comentario">Comentarios</label>
-                <textarea class="form-control" id="comentario" name="comentario" style="border: black solid 1px;" rows="5"></textarea>
-            </div>
-
-            <div class="form-group">
-                <div id="error" class="alert alert-danger"></div>
-            </div>
-
-            <div class="row">
-                <div class="col-md-6">
+    <div class="container espaciado_superior">
+        <div class="row">
+            <div class="col-md-1"></div>
+            <div class="col-md-10" style="background-color: #fff; border: black solid 1px;">
+                <h1 style="padding-top: 10px; margin-bottom: 30px;">Comunícate con Nosotros</h1>
+                <form action="home.html" method="POST" name="formulario_contacto" id="formulario_contacto">
                     <div class="form-group">
-                        <button type="reset" class="btn btn-primary">Limpiar Campos</button>
+                        <label for="nombre_completo">Nombre Completo</label>
+                        <input type="text" class="form-control espacios_input" name="nombre_completo"
+                            id="nombre_completo" placeholder="Ingrese su nombre">
                     </div>
-                </div>
-                <div class="col-md-6" style="text-align: right;">
+
                     <div class="form-group">
-                        <button type="submit" class="btn btn-primary">Enviar Formulario</button>
+                        <label for="correo">Correo Eletrónico</label>
+                        <input type="email" class="form-control espacios_input" name="correo" id="correo"
+                            placeholder="ejemplo@ejemplo.com">
                     </div>
-                </div>
+
+                    <div class="form-group">
+                        <label for="asunto">Asunto</label>
+                        <input type="text" class="form-control espacios_input" name="asunto" id="asunto">
+                    </div>
+                    <div class="form-group">
+                        <label for="comentario">Comentarios</label>
+                        <textarea class="form-control espacios_input" id="comentario" name="comentario"
+                            rows="5"></textarea>
+                    </div>
+
+                    <div class="form-group">
+                        <div id="error" class="alert alert-danger"></div>
+                    </div>
+
+                    <div class="row">
+                        <div class="col-md-6">
+                            <div class="form-group">
+                                <button type="reset" class="btn btn-primary">Limpiar Campos</button>
+                            </div>
+                        </div>
+                        <div class="col-md-6" style="text-align: right;">
+                            <div class="form-group">
+                                <button type="submit" class="btn btn-primary">Enviar Formulario</button>
+                            </div>
+                        </div>
+                    </div>
+                </form>
             </div>
-        </form>
+            <div class="col-md-1"></div>
+        </div>
     </div>
-    
+
 </body>
 
 </html>
