--- a/Registrarse.html
+++ b/Registrarse.html
@@ -17,7 +17,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Lato&display=swap" rel="stylesheet">
     <!--Importe de los estilos(css)-->
     <link type="text/css" rel="stylesheet" href="Css/estilos.css">
-
+    <!--ReCaptchaV2-->
     <script src="https://www.google.com/recaptcha/api.js" async defer></script>
 
     <script type="text/javascript">
