--- a/Home.html
+++ b/Home.html
@@ -98,7 +98,7 @@
         <!-- The slideshow -->
         <div class="carousel-inner">
             <div class="carousel-item active">
-                <img src="Imagenes/OFERTA PAG WEB.jpg" alt="polera" width="100%">
+                <img src="Imagenes/OFERTA PAG WEB.jpg" alt="polera" width="100%" height="500">
             </div>
             <div class="carousel-item">
                 <img src="Imagenes/banner polerones.jpg" alt="poleras" width="1100" height="500">
