--- a/Pantalones.html
+++ b/Pantalones.html
@@ -43,15 +43,15 @@
                 </li>
                 <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle item_select" href="#" id="navbardrop" data-toggle="dropdown">
-                        Pantalones
+                        Polerones
                     </a>
                     <div class="dropdown-menu">
                         <a class="dropdown-item" href="poleras.html">Poleras</a>
-                        <a class="dropdown-item" href="polerones.html">Polerones</a>
+                        <a class="dropdown-item" href="Pantalones.html">Pantalones</a>
                     </div>
+                </li>
                 <li class="nav-item">
                     <a class="nav-link color_letra" href="contactanos.html">Contáctanos</a>
-                </li>
                 </li>
             </ul>
             <!--Registrarse / Iniciar Sesion-->
@@ -83,16 +83,112 @@
         </div>
     </nav>
     <!--Fin Barra Menu-->
+    
+    <!--Buscar-->
+    <form action="poleras.html" method="POST" name="buscar_polera" id="buscar_polera">
+        <div class="container">
+            <div class="row">
+                <input class="form-control mr-sm-2 buscar" type="text" placeholder="Ingresar Producto" style="margin-top: 1rem; margin-bottom: 1rem;">
+                <button class="btn btn-primary" style="border: #005BBC solid 1px; margin-top: 1rem; margin-bottom: 1rem;" type="submit">Buscar</button>
+            </div>
+        </div>
+    </form>
 
-    <div class="container" style="text-align: center; margin-top: 10%;">
-        <div class="row">
-            <div class="col-md-12" style="background-color: #fff; border: black solid 1px;">
-                <h1 style="padding-top: 30px;">:( Lo sentimos!</h1>
-                <h4 style="padding-bottom: 30px;">Este producto no esta disponible en estos momentos</h4>
+    <!--Polerones-->
+    <div class="container">
+        <div class="row espacio_prod">
+            <div class="col-md-4">
+                <div class="card">
+                    <div class="card">
+                        <img src="imagenes/pantalon 1.jpg" id="poleron1" alt="Poleron 1" style="width:100%" class="ajuste_fotos">
+                        <h1>Pantalon</h1> 
+                        <h1>Jordan</h1>
+                        <p class="price">$20.000</p>
+                        <p>Pantalon Top Quality con estampado a serigrafia y tela prelavada</p>
+                        <p><button>Añadir al carrito</button></p>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-4">
+                <div class="card">
+                    <div class="card">
+                        <img src="imagenes/pantalon 2.jpg" id="poleron2" alt="Poleron 2" style="width:100%" class="ajuste_fotos">
+                        <h1>Pantalon</h1> 
+                        <h1>Jordan</h1>
+                        <p class="price">$20.000</p>
+                        <p>Pantalon Top Quality con bordado y tela prelavada</p>
+                        <p><button>Añadir al carrito</button></p>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-4">
+                <div class="card">
+                    <div class="card">
+                        <img src="imagenes/pantalon 3.jpg" id="poleron3" alt="Poleron 3" style="width:100%" class="ajuste_fotos">
+                        <h1>Pantalon</h1>
+                        <h1>Adidas</h1>
+                        <p class="price">$20.000</p>
+                        <p>Pantalon Top Quality con estampado a serigrafia y tela prelavada</p>
+                        <p><button>Añadir al carrito</button></p>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
+    <!--Fin Poleras-->
 
+    <!--Inicio Pie de Página-->
+    <footer class="bg-light text-center text-lg-start" style="margin-top: 50px;">
+        <div class="container-fluid p-3">
+            <div class="row">
+                <div class="col-md-4">
+                    <h5 class="text-uppercase">Horarios de Atención</h5>
+
+                    <ul class="list-unstyled mb-0" style="line-height: 1;">
+                        <li>
+                            <p class="text-dark">Lunes: 10:00 a 20:00</p>
+                        </li>
+                        <li>
+                            <p class="text-dark">Martes: 10:00 a 20:00</p>
+                        </li>
+                        <li>
+                            <p class="text-dark">Miércoles: 10:00 a 20:00</p>
+                        </li>
+                        <li>
+                            <p class="text-dark">Jueves: 10:00 a 20:00</p>
+                        </li>
+                        <li>
+                            <p class="text-dark">Viernes: 10:00 a 20:00</p>
+                        </li>
+                    </ul>
+                </div>
+
+                <div class="col-md-4">
+                    <h5 class="text-uppercase mb-0" style="padding-bottom: 10px;">Redes Sociales</h5>
+
+                    <ul class="list-unstyled lados_pie_pag">
+                        <p>
+                            <a href="https://www.instagram.com/amon.store._/?hl=es" class="fa fa-instagram"></a>
+                            <a href="#" class="fa fa-facebook"></a>
+                        </p>
+                    </ul>
+                </div>
+
+                <div class="col-md-4">
+                    <h5 class="text-uppercase">Contáctanos</h5>
+
+                    <ul class="list-unstyled mb-0" style="line-height: 1;">
+                        <li>
+                            <p>Telefono: +56 9 4998 3478</p>
+                        </li>
+                        <li>
+                            <p>Correo Electrónico: a.gonzalez3@duocuc.cl</p>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+    </footer>
+    <!--Fin Pie de Página-->
 </body>
-
 </html>
