--- a/polerones.html
+++ b/polerones.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Poleras</title>
+    <title>Polerones</title>
     <!--Boostrap4-->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
@@ -141,7 +141,7 @@
                         <img src="imagenes/poleron4.jpg" id="poleron4" alt="Poleron 4" style="width:100%" class="ajuste_fotos">
                         <h1>Poleron</h1>
                         <h1>Tommy Hilfiger</h1>
-                        <p class="price">$14.000</p>
+                        <p class="price">$12.000</p>
                         <p>Poleron Top Quality con estampado a serigrafia y tela prelavada</p>
                         <p><button>Añadir al carrito</button></p>
                     </div>
@@ -165,7 +165,7 @@
                         <img src="imagenes/poleron6.jpg" id="poleron6" alt="Poleron 6" style="width:100%" class="ajuste_fotos">
                         <h1>Poleron</h1>
                         <h1>Tommy Hilfiger</h1>
-                        <p class="price">$14.000</p>
+                        <p class="price">$12.000</p>
                         <p>Poleron Top Quality con estampado a serigrafia y tela prelavada</p>
                         <p><button>Añadir al carrito</button></p>
                     </div>
