--- a/Home.html
+++ b/Home.html
@@ -101,7 +101,7 @@
                 <img src="Imagenes/OFERTA PAG WEB.jpg" alt="polera" width="100%" height="500">
             </div>
             <div class="carousel-item">
-                <img src="Imagenes/banner polerones.jpg" alt="poleras" width="1100" height="500">
+                <img src="Imagenes/banner oferta.jpg" alt="poleras" width="100%" height="500">
             </div>
         </div>
 
