Final listo para presentar

--- a/poleras.html
+++ b/poleras.html
@@ -99,12 +99,12 @@
 
     <!--Poleras-->
     <div class="container">
-        <div class="row">
+        <div class="row espacio_prod">
             <div class="col-md-4">
                 <div class="card">
                     <div class="card">
-                        <img src="imagenes/polera1.jpg" id="polera1" alt="Polera 1" style="width:100%"
-                            class="ajuste_fotos">
+                        <img src="imagenes/polera jordan.jpg" id="polera1" alt="Polera 1" style="width:100%"
+                            height="215">
                         <h1>Polera</h1>
                         <h1>Jordan</h1>
                         <p class="price">$7.500</p>
@@ -116,8 +116,8 @@
             <div class="col-md-4">
                 <div class="card">
                     <div class="card">
-                        <img src="imagenes/polera2.jpg" id="polera2" alt="Polera 2" style="width:100%"
-                            class="ajuste_fotos">
+                        <img src="imagenes/polera tommy.jpg" id="polera2" alt="Polera 2" style="width:100%" 
+                            height="215">
                         <h1>Polera</h1>
                         <h1>Tommy Hilfiger</h1>
                         <p class="price">$7.500</p>
@@ -129,10 +129,35 @@
             <div class="col-md-4">
                 <div class="card">
                     <div class="card">
-                        <img src="imagenes/polera3.jpg" id="polera3" alt="Polera 3" style="width:100%"
-                            class="ajuste_fotos">
+                        <img src="imagenes/polera3.jpg" id="polera3" alt="Polera 3" style="width:100%">
                         <h1>Polera</h1>
                         <h1>Jordan</h1>
+                        <p class="price">$7.500</p>
+                        <p>Polera Top Quality con estampado a serigrafia y tela prelavada</p>
+                        <p><button>Añadir al carrito</button></p>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="row espacio_prod">
+            <div class="col-md-4">
+                <div class="card">
+                    <div class="card">
+                        <img src="imagenes/polera1.jpg" id="polera1" alt="Polera 1" style="width:100%">
+                        <h1>Polera</h1>
+                        <h1>Jordan</h1>
+                        <p class="price">$7.500</p>
+                        <p>Polera Top Quality con estampado a serigrafia y tela prelavada</p>
+                        <p><button>Añadir al carrito</button></p>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-4">
+                <div class="card">
+                    <div class="card">
+                        <img src="imagenes/polera2.jpg" id="polera2" alt="Polera 2" style="width:100%">
+                        <h1>Polera</h1>
+                        <h1>Tommy Hilfiger</h1>
                         <p class="price">$7.500</p>
                         <p>Polera Top Quality con estampado a serigrafia y tela prelavada</p>
                         <p><button>Añadir al carrito</button></p>
