--- a/Pantalones.html
+++ b/Pantalones.html
@@ -43,11 +43,11 @@
                 </li>
                 <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle item_select" href="#" id="navbardrop" data-toggle="dropdown">
-                        Polerones
+                        Pantalones
                     </a>
                     <div class="dropdown-menu">
                         <a class="dropdown-item" href="poleras.html">Poleras</a>
-                        <a class="dropdown-item" href="Pantalones.html">Pantalones</a>
+                        <a class="dropdown-item" href="polerones.html">Polerones</a>
                     </div>
                 </li>
                 <li class="nav-item">
@@ -97,7 +97,7 @@
     <!--Polerones-->
     <div class="container">
         <div class="row espacio_prod">
-            <div class="col-md-4">
+            <div class="col-md-4 espacio_prod">
                 <div class="card">
                     <div class="card">
                         <img src="imagenes/pantalon 1.jpg" id="poleron1" alt="Poleron 1" style="width:100%" class="ajuste_fotos">
@@ -109,7 +109,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col-md-4">
+            <div class="col-md-4 espacio_prod">
                 <div class="card">
                     <div class="card">
                         <img src="imagenes/pantalon 2.jpg" id="poleron2" alt="Poleron 2" style="width:100%" class="ajuste_fotos">
@@ -121,7 +121,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col-md-4">
+            <div class="col-md-4 espacio_prod">
                 <div class="card">
                     <div class="card">
                         <img src="imagenes/pantalon 3.jpg" id="poleron3" alt="Poleron 3" style="width:100%" class="ajuste_fotos">
