--- a/polerones.html
+++ b/polerones.html
@@ -96,8 +96,8 @@
 
     <!--Polerones-->
     <div class="container">
-        <div class="row espacio_prod">
-            <div class="col-md-4">
+        <div class="row">
+            <div class="col-md-4 espacio_prod">
                 <div class="card">
                     <div class="card">
                         <img src="imagenes/poleron1.jpg" id="poleron1" alt="Poleron 1" style="width:100%" class="ajuste_fotos">
@@ -109,7 +109,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col-md-4">
+            <div class="col-md-4 espacio_prod">
                 <div class="card">
                     <div class="card">
                         <img src="imagenes/poleron2.jpg" id="poleron2" alt="Poleron 2" style="width:100%" class="ajuste_fotos">
@@ -121,7 +121,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col-md-4">
+            <div class="col-md-4 espacio_prod">
                 <div class="card">
                     <div class="card">
                         <img src="imagenes/poleron3.jpg" id="poleron3" alt="Poleron 3" style="width:100%" class="ajuste_fotos">
@@ -134,8 +134,8 @@
                 </div>
             </div>
         </div>
-        <div class="row espacio_prod">
-            <div class="col-md-4">
+        <div class="row">
+            <div class="col-md-4 espacio_prod">
                 <div class="card">
                     <div class="card">
                         <img src="imagenes/poleron4.jpg" id="poleron4" alt="Poleron 4" style="width:100%" class="ajuste_fotos">
@@ -147,7 +147,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col-md-4">
+            <div class="col-md-4 espacio_prod">
                 <div class="card">
                     <div class="card">
                         <img src="imagenes/poleron5.jpg" id="poleron5" alt="Poleron 5" style="width:100%" class="ajuste_fotos">
@@ -159,7 +159,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col-md-4">
+            <div class="col-md-4 espacio_prod">
                 <div class="card">
                     <div class="card">
                         <img src="imagenes/poleron6.jpg" id="poleron6" alt="Poleron 6" style="width:100%" class="ajuste_fotos">
@@ -172,7 +172,7 @@
                 </div>
             </div>
         </div>
-        <div class="row espacio_prod">
+        <div class="row">
             <div class="col-md-4">
                 <div class="card">
                     <div class="card">
@@ -185,7 +185,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col-md-4">
+            <div class="col-md-4 espacio_prod">
                 <div class="card">
                     <div class="card">
                         <img src="imagenes/poleron8.jpg" id="poleron8" alt="Poleron 8" style="width:100%" class="ajuste_fotos">
@@ -197,7 +197,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col-md-4">
+            <div class="col-md-4 espacio_prod">
                 <div class="card">
                     <div class="card">
                         <img src="imagenes/poleron9.jpg" id="poleron9" alt="Poleron 9" style="width:100%" class="ajuste_fotos">
