--- a/poleras.html
+++ b/poleras.html
@@ -99,8 +99,8 @@
 
     <!--Poleras-->
     <div class="container">
-        <div class="row espacio_prod">
-            <div class="col-md-4">
+        <div class="row">
+            <div class="col-md-4 espacio_prod">
                 <div class="card">
                     <div class="card">
                         <img src="imagenes/polera jordan.jpg" id="polera1" alt="Polera 1" style="width:100%"
@@ -113,7 +113,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col-md-4">
+            <div class="col-md-4 espacio_prod">
                 <div class="card">
                     <div class="card">
                         <img src="imagenes/polera tommy.jpg" id="polera2" alt="Polera 2" style="width:100%" 
@@ -126,7 +126,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col-md-4">
+            <div class="col-md-4 espacio_prod">
                 <div class="card">
                     <div class="card">
                         <img src="imagenes/polera3.jpg" id="polera3" alt="Polera 3" style="width:100%">
@@ -139,8 +139,8 @@
                 </div>
             </div>
         </div>
-        <div class="row espacio_prod">
-            <div class="col-md-4">
+        <div class="row">
+            <div class="col-md-4 espacio_prod">
                 <div class="card">
                     <div class="card">
                         <img src="imagenes/polera1.jpg" id="polera1" alt="Polera 1" style="width:100%">
@@ -152,7 +152,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col-md-4">
+            <div class="col-md-4 espacio_prod">
                 <div class="card">
                     <div class="card">
                         <img src="imagenes/polera2.jpg" id="polera2" alt="Polera 2" style="width:100%">
