--- a/Home.html
+++ b/Home.html
@@ -18,8 +18,6 @@
     <link type="text/css" rel="stylesheet" href="Css/estilos.css">
     <!--Importe de los iconos para las redes sociales-->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-
-
 </head>
 
 <body>
@@ -47,7 +45,7 @@
                         Productos
                     </a>
                     <div class="dropdown-menu">
-                        
+
                         <a class="dropdown-item" href="polerones.html">Polerones</a>
                         <a class="dropdown-item" href="poleras.html">Poleras</a>
                         <a class="dropdown-item" href="Pantalones.html">Pantalones</a>
@@ -87,8 +85,7 @@
     </nav>
     <!--Fin Barra Menu-->
 
-    <body>
-        <!--Inicio Slider-->
+    <!--Inicio Slider-->
     <div id="demo" class="carousel slide" data-ride="carousel">
         <!-- Indicators -->
         <ul class="carousel-indicators">
@@ -99,10 +96,10 @@
         <!-- The slideshow -->
         <div class="carousel-inner">
             <div class="carousel-item active">
-                <img src="Imagenes/OFERTA PAG WEB.jpg" alt="polera" width="100%" height="500">
+                <img src="Imagenes/OFERTA PAG WEB.jpg" alt="polera" width="100%">
             </div>
             <div class="carousel-item">
-                <img src="Imagenes/banner oferta.jpg" alt="poleras" width="100%" height="500">
+                <img src="Imagenes/banner oferta.jpg" alt="poleras" width="100%">
             </div>
         </div>
 
@@ -116,7 +113,6 @@
         <br>
     </div>
     <!--Fin Slider-->
-    </body>
 
     <!--Inicio Pie de Página-->
     <footer class="bg-light text-center text-lg-start" style="margin-top: 50px;">
@@ -143,7 +139,7 @@
                         </li>
                     </ul>
                 </div>
-                
+
                 <div class="col-md-4">
                     <h5 class="text-uppercase mb-0" style="padding-bottom: 10px;">Redes Sociales</h5>
 
@@ -166,10 +162,10 @@
                             <p>Correo Electrónico: a.gonzalez3@duocuc.cl</p>
                         </li>
                     </ul>
+                </div>
             </div>
         </div>
-        </div>
-    </footer>   
+    </footer>
     <!--Fin Pie de Página-->
 </body>
 
