--- a/Pantalones.html
+++ b/Pantalones.html
@@ -36,13 +36,13 @@
         <div class="collapse navbar-collapse" id="navb">
             <ul class="navbar-nav mr-auto">
                 <li class="nav-item">
-                    <a class="nav-link color_letra" href="Home.html">Inicio</a>
+                    <a class="nav-link color_letra padding_navbar" href="Home.html">Inicio</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link color_letra" href="Quienes_somos.html">¿Quiénes somos?</a>
+                    <a class="nav-link color_letra padding_navbar" href="Quienes_somos.html">¿Quiénes somos?</a>
                 </li>
                 <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle item_select" href="#" id="navbardrop" data-toggle="dropdown">
+                    <a class="nav-link dropdown-toggle item_select padding_navbar" href="#" id="navbardrop" data-toggle="dropdown">
                         Pantalones
                     </a>
                     <div class="dropdown-menu">
@@ -51,12 +51,12 @@
                     </div>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link color_letra" href="contactanos.html">Contáctanos</a>
+                    <a class="nav-link color_letra padding_navbar" href="contactanos.html">Contáctanos</a>
                 </li>
             </ul>
             <!--Registrarse / Iniciar Sesion-->
             <ul class="nav navbar-nav navbar-right">
-                <li class="separacion_reg_ini">
+                <li class="separacion_reg_ini padding_navbar">
                     <a href="Registrarse.html" class="color_letra2">
                         <svg xmlns="http://www.w3.org/2000/svg" width="25" height="25" fill="currentColor"
                             class="bi bi-person-circle" viewBox="0 0 16 16">
@@ -67,7 +67,7 @@
                         Registrarse
                     </a>
                 </li>
-                <li class="separacion_reg_ini">
+                <li class="separacion_reg_ini bottom_ini padding_navbar">
                     <a href="inicio_sesion.html" class=" color_letra2">
                         <svg xmlns="http://www.w3.org/2000/svg" width="25" height="25" fill="currentColor"
                             class="bi bi-box-arrow-in-right" viewBox="0 0 16 16">
