--- a/Home.html
+++ b/Home.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -35,13 +34,13 @@
         <div class="collapse navbar-collapse" id="navb">
             <ul class="navbar-nav mr-auto">
                 <li class="nav-item">
-                    <a class="nav-link item_select" href="Home.html">Inicio</a>
+                    <a class="nav-link item_select padding_navbar" href="Home.html">Inicio</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link color_letra" href="Quienes_somos.html">¿Quiénes somos?</a>
+                    <a class="nav-link color_letra padding_navbar" href="Quienes_somos.html">¿Quiénes somos?</a>
                 </li>
                 <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle color_letra" href="#" id="navbardrop" data-toggle="dropdown">
+                    <a class="nav-link dropdown-toggle color_letra padding_navbar" href="#" id="navbardrop" data-toggle="dropdown">
                         Productos
                     </a>
                     <div class="dropdown-menu">
@@ -52,12 +51,12 @@
                     </div>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link color_letra" href="contactanos.html">Contáctanos</a>
+                    <a class="nav-link color_letra padding_navbar" href="contactanos.html">Contáctanos</a>
                 </li>
             </ul>
             <!--Registrarse / Iniciar Sesion-->
             <ul class="nav navbar-nav navbar-right">
-                <li class="separacion_reg_ini">
+                <li class="separacion_reg_ini padding_navbar">
                     <a href="Registrarse.html" class="color_letra2">
                         <svg xmlns="http://www.w3.org/2000/svg" width="25" height="25" fill="currentColor"
                             class="bi bi-person-circle" viewBox="0 0 16 16">
@@ -68,7 +67,7 @@
                         Registrarse
                     </a>
                 </li>
-                <li class="separacion_reg_ini">
+                <li class="separacion_reg_ini bottom_ini padding_navbar">
                     <a href="inicio_sesion.html" class=" color_letra2">
                         <svg xmlns="http://www.w3.org/2000/svg" width="25" height="25" fill="currentColor"
                             class="bi bi-box-arrow-in-right" viewBox="0 0 16 16">
